# JSL

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  JSL.h  Makefile  README.md
Array/: Array.h  VectorSearches.h
CommandArgs/: Argument.h  CommandArgs.h  Toggle.h
Display/: Display.h  PredictionBar.h  ProgressBar.h  clearScreen.h
FileIO/: FileIO.h  LineReader.h  fileWriter.h  jfglatex.h  lineCounter.h  locationExists.h  mkdir.h  mkdirSafely.h  rm.h
Maths/: Maths.h  MiscFunctions.h  Quaternion.h  UnitQuaternion.h  matrix.h  vector.h
Strings/: Strings.h  Time.h  split.h
System/: System.h  assert.h  error.h  readPipe.h  rm.h  systemCall.h
Testing/: Testing.h  Testing_UnitTests.h  UnitTest.h
Vector/: VectorSearches.h
docs/: .readthedocs.yaml  Makefile  argument.rst  compileDocs  conf.py  custom_envs.py  dir-handler.rst  doxy.config  file-handling.rst  index.rst  line-reader.rst  location-checker.rst  mathematics.rst  requirements.txt  rm.rst  string-split.rst  strings.rst  time-strings.rst  unit-testing.rst  vectors.rst
docs/_static/: custom.css
docs/docfiles/: Log.rst  async.rst  concepts.rst  data.txt  display.rst  fileio.rst  interface.rst  parameters.rst  plot.rst  strings.rst  style.rst  time.rst  vectors.rst
docs/visualiser/: colouriser.py  conf.py  heatmap.dot  heirarchy.dot  network.dot  network_all.dot  redot  visualise
gnuplot/: PlotData.h  axis.h  colorArray.h  gnuplot.h  gnuplotMain.h
include/: JSL.h
include/Display/: ANSI_Codes.h
include/FileIO/: archiver.h  pathStatus.h
include/JSL/: Async.h  Concepts.h  Display.h  FileIO.h  IO.h  Interface.h  Log.h  Parameters.h  Plot.h  Strings.h  Time.h  Vectors.h  codeviz.dot
include/Parameters/: Describer.h
include/Plot/: axis.h
include/Strings/: Strings.h  equals.h  trim.h
include/Time/: Timer.h
modules/Display/: ANSI_Codes.h  Log.h  Log_Utils.h  ProgressBar.h
modules/FileIO/: FileIO.h  fileWriters.h  forLineIn.h  ls.h  pipedInput.h
quarantine/: parallel.h
test/: CMakeLists.txt  Makefile  unit_test
(+1648 files in other folders)
